Fix Falmer Header bar z-index

--- a/src/css/components/FalmerHeader.css
+++ b/src/css/components/FalmerHeader.css
@@ -8,6 +8,8 @@
   top: 0;
   padding: 0.3rem;
 
+  z-index: 200;
+
   display: flex;
 
   &__logotype {
